refactor: 各エントリではsourceキーだけを持つようにする
